feat(scaling-variation): use new filters in scaling variations
Signed-off-by: Kamil MARUT <kamil.marut@rte-france.com>