@@ -1,30 +1,32 @@
-/**
- * Copyright (c) 2024, RTE (http://www.rte-france.com)
+/*
+ * Copyright (c) 2024-2026, RTE (http://www.rte-france.com)
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
-package org.gridsuite.modification.modifications;
+package org.gridsuite.modification.modifications.saling;
 
 import com.powsybl.commons.report.ReportNode;
-import com.powsybl.iidm.network.IdentifiableType;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.iidm.network.impl.NetworkFactoryImpl;
-import org.gridsuite.modification.IFilterService;
+import lombok.Getter;
+import org.gridsuite.filter.utils.EquipmentType;
+import org.gridsuite.filter.wip.FilterLoader;
 import org.gridsuite.modification.VariationMode;
 import org.gridsuite.modification.VariationType;
-import org.gridsuite.modification.dto.FilterEquipments;
 import org.gridsuite.modification.dto.FilterInfos;
 import org.gridsuite.modification.dto.GeneratorScalingInfos;
-import org.gridsuite.modification.dto.IdentifiableAttributes;
 import org.gridsuite.modification.dto.ModificationInfos;
 import org.gridsuite.modification.dto.ScalingVariationInfos;
+import org.gridsuite.modification.modifications.AbstractNetworkModificationTest;
+import org.gridsuite.modification.modifications.scaling.GeneratorScaling;
 import org.gridsuite.modification.report.NetworkModificationReportResourceBundle;
 import org.gridsuite.modification.utils.NetworkCreation;
+import org.gridsuite.modification.utils.TestUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+
 import java.nio.file.Paths;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
@@ -33,8 +35,6 @@ import java.util.stream.Stream;
 
 import static org.gridsuite.modification.utils.TestUtils.assertLogMessage;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
 
 /**
  * @author Seddik Yengui <Seddik.yengui at rte-france.com>
@@ -63,12 +63,26 @@ class GeneratorScalingTest extends AbstractNetworkModificationTest {
     private static final String GENERATOR_ID_10 = "gen10";
     private static final String GENERATOR_WRONG_ID_1 = "wrongId1";
 
-    @Mock
-    private IFilterService filterService;
+    private static final Map<UUID, Set<String>> FILTER_MAPPING = Map.of(
+            FILTER_ID_1, Set.of(GENERATOR_ID_1, GENERATOR_ID_2),
+            FILTER_ID_2, Set.of(GENERATOR_ID_3, GENERATOR_ID_4),
+            FILTER_ID_3, Set.of(GENERATOR_ID_5, GENERATOR_ID_6),
+            FILTER_ID_4, Set.of(GENERATOR_ID_7, GENERATOR_ID_8),
+            FILTER_ID_5, Set.of(GENERATOR_ID_9, GENERATOR_ID_10));
+
+    private static final Map<String, Double> DISTIBUTION_KEYS_MAPPING = Map.of(
+            GENERATOR_ID_1, 1.0, GENERATOR_ID_2, 2.0,
+            GENERATOR_ID_3, 2.0, GENERATOR_ID_4, 5.0,
+            GENERATOR_ID_5, 6.0, GENERATOR_ID_6, 7.0,
+            GENERATOR_ID_7, 3.0, GENERATOR_ID_8, 8.0,
+            GENERATOR_ID_9, 0.0, GENERATOR_ID_10, 9.0
+    );
+
+    @Getter
+    private final FilterLoader filterLoader = TestUtils.createFilterLoader(EquipmentType.GENERATOR, FILTER_MAPPING, DISTIBUTION_KEYS_MAPPING);
 
     @BeforeEach
     void specificSetUp() {
-        MockitoAnnotations.openMocks(this);
         //createGenerators
         getNetwork().getVariantManager().setWorkingVariant("variant_1");
         getNetwork().getGenerator(GENERATOR_ID_1).setTargetP(100).setMaxP(500);
@@ -83,42 +97,19 @@ class GeneratorScalingTest extends AbstractNetworkModificationTest {
         getNetwork().getGenerator(GENERATOR_ID_10).setTargetP(100).setMaxP(500);
     }
 
-    private static Map<UUID, FilterEquipments> getTestFilters() {
-        FilterEquipments filter1 = FilterEquipments.builder().filterId(FILTER_ID_1).identifiableAttributes(List.of(new IdentifiableAttributes(GENERATOR_ID_1, IdentifiableType.GENERATOR, 1.0),
-            new IdentifiableAttributes(GENERATOR_ID_2, IdentifiableType.GENERATOR, 2.0))).build();
-
-        FilterEquipments filter2 = FilterEquipments.builder().filterId(FILTER_ID_2).identifiableAttributes(List.of(new IdentifiableAttributes(GENERATOR_ID_3, IdentifiableType.GENERATOR, 2.0),
-            new IdentifiableAttributes(GENERATOR_ID_4, IdentifiableType.GENERATOR, 5.0))).build();
-
-        FilterEquipments filter3 = FilterEquipments.builder().filterId(FILTER_ID_3).identifiableAttributes(List.of(new IdentifiableAttributes(GENERATOR_ID_5, IdentifiableType.GENERATOR, 6.0),
-            new IdentifiableAttributes(GENERATOR_ID_6, IdentifiableType.GENERATOR, 7.0))).build();
-
-        FilterEquipments filter4 = FilterEquipments.builder().filterId(FILTER_ID_4).identifiableAttributes(List.of(new IdentifiableAttributes(GENERATOR_ID_7, IdentifiableType.GENERATOR, 3.0),
-            new IdentifiableAttributes(GENERATOR_ID_8, IdentifiableType.GENERATOR, 8.0))).build();
-
-        FilterEquipments filter5 = FilterEquipments.builder().filterId(FILTER_ID_5).identifiableAttributes(List.of(new IdentifiableAttributes(GENERATOR_ID_9, IdentifiableType.GENERATOR, 0.0),
-            new IdentifiableAttributes(GENERATOR_ID_10, IdentifiableType.GENERATOR, 9.0))).build();
-
-        return Map.of(FILTER_ID_1, filter1, FILTER_ID_2, filter2, FILTER_ID_3, filter3, FILTER_ID_4, filter4, FILTER_ID_5, filter5);
-    }
-
     @Test
     @Override
     public void testApply() throws Exception {
         GeneratorScalingInfos modificationInfo = (GeneratorScalingInfos) buildModification();
-        when(filterService.getUuidFilterEquipmentsMap(any(), any())).thenReturn(getTestFilters());
-        GeneratorScaling generatorScaling = (GeneratorScaling) modificationInfo.toModification();
-        generatorScaling.initApplicationContext(filterService, null);
+        GeneratorScaling generatorScaling = (GeneratorScaling) modificationInfo.toModification(filterLoader);
         generatorScaling.apply(getNetwork());
         assertAfterNetworkModificationApplication();
     }
 
     @Test
-    void testVentilationModeWithoutDistributionKey() throws Exception {
-        List<IdentifiableAttributes> identifiableAttributes = List.of(new IdentifiableAttributes(GENERATOR_ID_2, IdentifiableType.GENERATOR, null),
-            new IdentifiableAttributes(GENERATOR_ID_3, IdentifiableType.GENERATOR, null));
-        Map<UUID, FilterEquipments> filters = Map.of(FILTER_NO_DK, FilterEquipments.builder().filterId(FILTER_NO_DK).identifiableAttributes(identifiableAttributes).build());
-        when(filterService.getUuidFilterEquipmentsMap(any(), any())).thenReturn(filters);
+    void testVentilationModeWithoutDistributionKey() {
+        Map<UUID, Set<String>> filterMappings = Map.of(FILTER_NO_DK, Set.of(GENERATOR_ID_2, GENERATOR_ID_3));
+        FilterLoader customFilterLoader = TestUtils.createFilterLoader(EquipmentType.GENERATOR, filterMappings, Collections.emptyMap());
 
         var filter = FilterInfos.builder()
                 .id(FILTER_NO_DK)
@@ -139,8 +130,7 @@ class GeneratorScalingTest extends AbstractNetworkModificationTest {
                 .variations(List.of(variation1))
                 .build();
 
-        GeneratorScaling generatorScaling = (GeneratorScaling) modificationToCreate.toModification();
-        generatorScaling.initApplicationContext(filterService, null);
+        GeneratorScaling generatorScaling = (GeneratorScaling) modificationToCreate.toModification(customFilterLoader);
         generatorScaling.apply(getNetwork());
 
         assertEquals(200, getNetwork().getGenerator(GENERATOR_ID_2).getTargetP(), 0.01D);
@@ -148,72 +138,63 @@ class GeneratorScalingTest extends AbstractNetworkModificationTest {
     }
 
     @Test
-    void testFilterWithWrongIds() throws Exception {
-        Map<UUID, FilterEquipments> filters = Map.of(FILTER_WRONG_ID_1, FilterEquipments.builder().filterId(FILTER_WRONG_ID_1).identifiableAttributes(List.of()).build());
-        when(filterService.getUuidFilterEquipmentsMap(any(), any())).thenReturn(filters);
+    void testFilterWithWrongIds() {
+        Map<UUID, Set<String>> filterMappings = Map.of(FILTER_WRONG_ID_1, Collections.emptySet());
+        FilterLoader customFilterLoader = TestUtils.createFilterLoader(EquipmentType.GENERATOR, filterMappings, Collections.emptyMap());
 
-        var filter = FilterInfos.builder()
+        FilterInfos filter = FilterInfos.builder()
                 .name("filter")
                 .id(FILTER_WRONG_ID_1)
                 .build();
-        var variation = ScalingVariationInfos.builder()
+        ScalingVariationInfos variation = ScalingVariationInfos.builder()
                 .variationMode(VariationMode.PROPORTIONAL)
                 .variationValue(100D)
                 .filters(List.of(filter))
                 .build();
-        var generatorScalingInfo = GeneratorScalingInfos.builder()
+        GeneratorScalingInfos generatorScalingInfo = GeneratorScalingInfos.builder()
                 .stashed(false)
                 .variationType(VariationType.TARGET_P)
                 .variations(List.of(variation))
                 .build();
 
-        GeneratorScaling generatorScaling = (GeneratorScaling) generatorScalingInfo.toModification();
-        generatorScaling.initApplicationContext(filterService, null);
+        GeneratorScaling generatorScaling = (GeneratorScaling) generatorScalingInfo.toModification(customFilterLoader);
         ReportNode report = generatorScalingInfo.createSubReportNode(ReportNode.newRootReportNode()
                 .withResourceBundles(NetworkModificationReportResourceBundle.BASE_NAME)
                 .withMessageTemplate("test").build());
         generatorScaling.apply(getNetwork(), report);
-        assertLogMessage(generatorScaling.getName() + ": There is no valid equipment ID among the provided filter(s)",
-                "network.modification.invalidFilters", report);
+        assertLogMessage("No equipment will be scaled",
+                "network.modification.scaling.noEquipmentToScale", report);
     }
 
     @Test
-    void testScalingCreationWithWarning() throws Exception {
-        Map<UUID, FilterEquipments> filters = Map.of(FILTER_ID_5, FilterEquipments.builder()
-                .filterId(FILTER_ID_5)
-                .identifiableAttributes(List.of(new IdentifiableAttributes(GENERATOR_ID_9, IdentifiableType.GENERATOR, 0.0),
-                        new IdentifiableAttributes(GENERATOR_ID_10, IdentifiableType.GENERATOR, 9.0)))
-                .build(),
-                FILTER_WRONG_ID_2, FilterEquipments.builder()
-                        .filterId(FILTER_WRONG_ID_2)
-                        .identifiableAttributes(
-                                List.of(new IdentifiableAttributes(GENERATOR_WRONG_ID_1, IdentifiableType.GENERATOR, 2.0)))
-                        .build());
-        when(filterService.getUuidFilterEquipmentsMap(any(), any())).thenReturn(filters);
+    void testScalingCreationWithWarning() {
+        Map<UUID, Set<String>> filterMappings = Map.of(FILTER_ID_5, Set.of(GENERATOR_ID_9, GENERATOR_ID_10),
+                FILTER_WRONG_ID_2, Set.of(GENERATOR_WRONG_ID_1));
+        Map<String, Double> distributionKeysMapping = Map.of(GENERATOR_ID_9, 0.0, GENERATOR_ID_10, 9.0, GENERATOR_WRONG_ID_1, 2.0);
+        FilterLoader customFilterLoader = TestUtils.createFilterLoader(EquipmentType.GENERATOR, filterMappings, distributionKeysMapping);
 
-        var filter = FilterInfos.builder()
+        FilterInfos filter = FilterInfos.builder()
                 .name("filter")
                 .id(FILTER_WRONG_ID_2)
                 .build();
 
-        var filter2 = FilterInfos.builder()
+        FilterInfos filter2 = FilterInfos.builder()
                 .name("filter2")
                 .id(FILTER_ID_5)
                 .build();
 
-        var variation = ScalingVariationInfos.builder()
+        ScalingVariationInfos variation = ScalingVariationInfos.builder()
                 .variationMode(VariationMode.PROPORTIONAL)
                 .variationValue(900D)
                 .filters(List.of(filter, filter2))
                 .build();
-        var generatorScalingInfo = GeneratorScalingInfos.builder()
+        GeneratorScalingInfos generatorScalingInfo = GeneratorScalingInfos.builder()
                 .stashed(false)
                 .variationType(VariationType.TARGET_P)
                 .variations(List.of(variation))
                 .build();
 
-        GeneratorScaling generatorScaling = (GeneratorScaling) generatorScalingInfo.toModification();
-        generatorScaling.initApplicationContext(filterService, null);
+        GeneratorScaling generatorScaling = (GeneratorScaling) generatorScalingInfo.toModification(customFilterLoader);
         generatorScaling.apply(getNetwork());
 
         assertEquals(600, getNetwork().getGenerator(GENERATOR_ID_9).getTargetP(), 0.01D);
@@ -227,56 +208,56 @@ class GeneratorScalingTest extends AbstractNetworkModificationTest {
 
     @Override
     protected ModificationInfos buildModification() {
-        var filter1 = FilterInfos.builder()
+        FilterInfos filter1 = FilterInfos.builder()
                 .id(FILTER_ID_1)
                 .name("filter1")
                 .build();
 
-        var filter2 = FilterInfos.builder()
+        FilterInfos filter2 = FilterInfos.builder()
                 .id(FILTER_ID_2)
                 .name("filter2")
                 .build();
 
-        var filter3 = FilterInfos.builder()
+        FilterInfos filter3 = FilterInfos.builder()
                 .id(FILTER_ID_3)
                 .name("filter3")
                 .build();
 
-        var filter4 = FilterInfos.builder()
+        FilterInfos filter4 = FilterInfos.builder()
                 .id(FILTER_ID_4)
                 .name("filter4")
                 .build();
 
-        var filter5 = FilterInfos.builder()
+        FilterInfos filter5 = FilterInfos.builder()
                 .id(FILTER_ID_5)
                 .name("filter5")
                 .build();
 
-        var variation1 = ScalingVariationInfos.builder()
+        ScalingVariationInfos variation1 = ScalingVariationInfos.builder()
                 .variationMode(VariationMode.PROPORTIONAL_TO_PMAX)
                 .variationValue(50D)
                 .filters(List.of(filter1))
                 .build();
 
-        var variation2 = ScalingVariationInfos.builder()
+        ScalingVariationInfos variation2 = ScalingVariationInfos.builder()
                 .variationMode(VariationMode.REGULAR_DISTRIBUTION)
                 .variationValue(50D)
                 .filters(List.of(filter2))
                 .build();
 
-        var variation3 = ScalingVariationInfos.builder()
+        ScalingVariationInfos variation3 = ScalingVariationInfos.builder()
                 .variationMode(VariationMode.STACKING_UP)
                 .variationValue(50D)
                 .filters(List.of(filter3))
                 .build();
 
-        var variation4 = ScalingVariationInfos.builder()
+        ScalingVariationInfos variation4 = ScalingVariationInfos.builder()
                 .variationMode(VariationMode.VENTILATION)
                 .variationValue(50D)
                 .filters(List.of(filter4))
                 .build();
 
-        var variation5 = ScalingVariationInfos.builder()
+        ScalingVariationInfos variation5 = ScalingVariationInfos.builder()
                 .variationMode(VariationMode.PROPORTIONAL)
                 .variationValue(50D)
                 .filters(List.of(filter1, filter5))
@@ -288,6 +269,45 @@ class GeneratorScalingTest extends AbstractNetworkModificationTest {
                 .variationType(VariationType.DELTA_P)
                 .variations(List.of(variation1, variation2, variation3, variation4, variation5))
                 .build();
+    }
+
+    @Test
+    void testFilteredDuplicatedEquipmentsRemoved() {
+        Map<UUID, Set<String>> filterMappings = Map.of(FILTER_ID_4, Set.of(GENERATOR_ID_9, GENERATOR_ID_10),
+                FILTER_ID_5, Set.of(GENERATOR_ID_9));
+        FilterLoader customFilterLoader = TestUtils.createFilterLoader(EquipmentType.GENERATOR, filterMappings, Collections.emptyMap());
+
+        FilterInfos filter = FilterInfos.builder()
+                .name("filter")
+                .id(FILTER_ID_4)
+                .build();
+
+        FilterInfos filter2 = FilterInfos.builder()
+                .name("filter2")
+                .id(FILTER_ID_5)
+                .build();
+
+        ScalingVariationInfos variation = ScalingVariationInfos.builder()
+                .variationMode(VariationMode.PROPORTIONAL)
+                .variationValue(900D)
+                .filters(List.of(filter, filter2))
+                .build();
+        GeneratorScalingInfos generatorScalingInfo = GeneratorScalingInfos.builder()
+                .stashed(false)
+                .variationType(VariationType.TARGET_P)
+                .variations(List.of(variation))
+                .build();
+
+        GeneratorScaling generatorScaling = (GeneratorScaling) generatorScalingInfo.toModification(customFilterLoader);
+        ReportNode report = generatorScalingInfo.createSubReportNode(ReportNode.newRootReportNode()
+                .withResourceBundles(NetworkModificationReportResourceBundle.BASE_NAME)
+                .withMessageTemplate("test").build());
+        generatorScaling.apply(getNetwork(), report);
+
+        assertEquals(600, getNetwork().getGenerator(GENERATOR_ID_9).getTargetP(), 0.01D);
+        assertEquals(300, getNetwork().getGenerator(GENERATOR_ID_10).getTargetP(), 0.01D);
+        assertLogMessage("Equipment gen9 already seen in previous filter evaluation, skipping it",
+                "network.modification.filterEvaluation.equipmentAlreadySeen", report);
     }
 
     @Override
@@ -331,34 +351,27 @@ class GeneratorScalingTest extends AbstractNetworkModificationTest {
                 .filter(g -> !generatorsToDisconnect.contains(g))
                 .toList();
 
-        List<IdentifiableAttributes> identifiableAttributes = List.of(
-                    new IdentifiableAttributes("GH1", IdentifiableType.GENERATOR, 0.0),
-                    new IdentifiableAttributes("GH2", IdentifiableType.GENERATOR, 100.0),
-                    new IdentifiableAttributes("GH3", IdentifiableType.GENERATOR, 100.0),
-                    new IdentifiableAttributes("GTH1", IdentifiableType.GENERATOR, 100.0),
-                    new IdentifiableAttributes("GTH2", IdentifiableType.GENERATOR, 100.0),
-                    new IdentifiableAttributes("GTH3", IdentifiableType.GENERATOR, 100.0));
-        Map<UUID, FilterEquipments> filters = Map.of(FILTER_ID_ALL_GEN, FilterEquipments.builder().filterId(FILTER_ID_ALL_GEN).identifiableAttributes(identifiableAttributes).build());
-        when(filterService.getUuidFilterEquipmentsMap(any(), any())).thenReturn(filters);
+        Map<UUID, Set<String>> filterMapping = Map.of(FILTER_ID_ALL_GEN, Set.of("GH1", "GH2", "GH3", "GTH1", "GTH2", "GTH3"));
+        Map<String, Double> distributionKeysMapping = Map.of("GH1", 0.0, "GH2", 100.0, "GH3", 100.0, "GTH1", 100.0, "GTH2", 100.0, "GTH3", 100.0);
+        FilterLoader customFilterLoader = TestUtils.createFilterLoader(EquipmentType.GENERATOR, filterMapping, distributionKeysMapping);
 
-        var filter = FilterInfos.builder()
+        FilterInfos filter = FilterInfos.builder()
                 .name("filter")
                 .id(FILTER_ID_ALL_GEN)
                 .build();
         final double variationValue = 100D;
-        var variation = ScalingVariationInfos.builder()
+        ScalingVariationInfos variation = ScalingVariationInfos.builder()
                 .variationMode(variationMode)
                 .variationValue(variationValue)
                 .filters(List.of(filter))
                 .build();
-        var generatorScalingInfo = GeneratorScalingInfos.builder()
+        GeneratorScalingInfos generatorScalingInfo = GeneratorScalingInfos.builder()
                 .stashed(false)
                 .variationType(VariationType.TARGET_P)
                 .variations(List.of(variation))
                 .build();
 
-        GeneratorScaling generatorScaling = (GeneratorScaling) generatorScalingInfo.toModification();
-        generatorScaling.initApplicationContext(filterService, null);
+        GeneratorScaling generatorScaling = (GeneratorScaling) generatorScalingInfo.toModification(customFilterLoader);
         generatorScaling.apply(getNetwork());
 
         // If we sum the targetP for all expected modified generators, we should have the requested variation value
